# litenvm

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cli/: CMakeLists.txt
cli/src/: cli.c
core/: CMakeLists.txt
core/include/: binary_format.h  callstack.h  config.h  constantpool.h  evalstack.h  executor.h  instruction.h  inststream.h  object.h  sample.h  stack.h  stackitem.h  string_builder_class.h  vtable.h
core/include/classes/: string_class.h
core/src/: binary_format.c  callstack.c  config.c  constantpool.c  evalstack.c  executor.c  inststream.c  object.c  sample.c  stack.c  string_builder_class.c  string_class.c  vtable.c
core/src/classes/: string_class.c
core/test/: CMakeLists.txt  binary_format_test.c  callstack_test.c  constantpool_test.c  evalstack_test.c  executor_test.c  sample2_test.c  sample_test.c  stack_test.c  unit_testing.h  vtable_test.c
